# mpi-test

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: check.yml  docs.yml  test.yml
src/: lib.rs
tests/: integration_test.rs
